// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/Number Field Default 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nomor KTP
     
  </label>
  <input
    name="Nomor KTP"
    onChange={[Function]}
    placeholder="Terdiri dari 14 karakter angka"
    required={false}
    type="number"
  />
</div>
`;

exports[`Storyshots Input/Number Field Default Value 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nomor KTP
     
  </label>
  <input
    defaultValue={1}
    name="Nomor KTP"
    onChange={[Function]}
    placeholder="Terdiri dari 14 karakter angka"
    required={false}
    type="number"
    value={1}
  />
</div>
`;

exports[`Storyshots Input/Number Field Error 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className={null}
  >
     
    Nomor KTP
     
  </label>
  <input
    name="Nomor KTP"
    onChange={[Function]}
    placeholder="Terdiri dari 14 karakter angka"
    required={false}
    type="number"
  />
  <span
    className="error"
  >
    Format KTP harus berupa 14 karakter angka
  </span>
</div>
`;

exports[`Storyshots Input/Number Field Required 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  color: #393F50;
  line-height: 20px;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 input,
.c0 select {
  border-width: 0px 0px 1px 0px;
  border-color: #00239D;
  display: block;
  width: 99%;
  padding: 12px 5px 12px 5px;
  font-size: 14px;
  font-family: Muli;
  line-height: 16px;
  color: #393F50;
  background-color: #FFFFFF;
}

.c0 input::-webkit-input-placeholder {
  color: #C4C4C4;
}

.c0 input::-moz-placeholder {
  color: #C4C4C4;
}

.c0 input:-ms-input-placeholder {
  color: #C4C4C4;
}

.c0 input::placeholder {
  color: #C4C4C4;
}

.c0 .error {
  font-family: Muli;
  font-style: normal;
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #EB4E2C;
}

<div
  className="c0"
>
  <label
    className="required"
  >
     
    Nomor KTP
     
  </label>
  <input
    name="Nomor KTP"
    onChange={[Function]}
    placeholder="Terdiri dari 14 karakter angka"
    required={true}
    type="number"
  />
</div>
`;
